<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_show_stats"
        android:title="@string/settings_show_stats">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_show_stats_off"
                    android:checkable="true"
                    android:title="@string/settings_stats_off" />
                <item
                    android:id="@+id/menu_show_stats_left"
                    android:checkable="true"
                    android:title="@string/settings_stats_bottom_left" />
                <item
                    android:id="@+id/menu_show_stats_right"
                    android:checkable="true"
                    android:title="@string/settings_stats_bottom_right" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_low_fps_warning"
        android:checkable="true"
        android:title="@string/settings_low_fps_warnings" />
    <item
        android:id="@+id/menu_picture_in_picture"
        android:checkable="true"
        android:title="@string/settings_picture_in_picture" />
    <item
        android:id="@+id/menu_video_rotation"
        android:title="@string/settings_rotation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_rotate_0"
                    android:checkable="true"
                    android:title="0°" />
                <item
                    android:id="@+id/menu_rotate_90"
                    android:checkable="true"
                    android:title="90°" />
                <item
                    android:id="@+id/menu_rotate_180"
                    android:checkable="true"
                    android:title="180°" />
                <item
                    android:id="@+id/menu_rotate_270"
                    android:checkable="true"
                    android:title="270°" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_video_flip"
        android:title="@string/settings_flip">
        <menu>
            <item
                android:id="@+id/menu_flip_h"
                android:checkable="true"
                android:title="Horizontal" />
            <item
                android:id="@+id/menu_flip_v"
                android:checkable="true"
                android:title="Vertical" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_help"
        android:title="@string/action_help" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/action_about" />
</menu>
